Header.js: Implementation of popup window in Header in progress, Bug to be fixed doesn't fit box to page size
#65

--- a/src/styles/ui/BaseContainer.scss
+++ b/src/styles/ui/BaseContainer.scss
@@ -10,26 +10,25 @@
 }
 
 .popup-box {
-  position: absolute;
+  position: relative;
   background: #000000;
   max-width: $DESKTOP_WIDTH;
   max-height: max-content;
-  top: auto;
-  left: auto;
+  z-index: +1;
 }
 
 .box {
   position: relative;
-  width: 70%;
+  max-width: $DESKTOP_WIDTH;
+  max-height: max-content;
+  top: auto;
+  bottom: auto;
   margin: 0 auto;
-  height: auto;
-  max-height: 70vh;
-  margin-top: calc(100vh - 85vh - 20px);
   background: #fff;
   border-radius: 4px;
   padding: 20px;
   border: 1px solid #999;
-  overflow: auto;
+  overflow: scroll;
 }
 
 .close-icon {
@@ -37,7 +36,7 @@
   cursor: pointer;
   position: fixed;
   right: calc(15% - 30px);
-  top: calc(100vh - 85vh - 33px);
+  top: calc(120vh - 100vh - 33px);
   background: #ededed;
   width: 45px;
   height: 50px;
